--- a/package.json
+++ b/package.json
@@ -8,17 +8,26 @@
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
-
     "test": "npm run unit",
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vux": "^2.2.0",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.16.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-html": "^5.0.3",
+    "eslint-plugin-import": "^2.17.1",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-vue": "^5.2.2",
     "fastclick": "^1.0.6",
-    "vuex-i18n": "^1.3.1",
-    "vuex": "^2.1.1",
+    "vue": "^2.5.2",
+    "vue-eslint-parser": "^6.0.3",
     "vue-router": "^3.0.1",
-    "vue": "^2.5.2"
+    "vuex": "^2.1.1",
+    "vuex-i18n": "^1.3.1",
+    "vux": "^2.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
